# matey

./: .gitignore  AGENTS.md  DESIGN.txt  LOCKFILES.txt  README.md  REBUILD_PLAN.md  matey.toml  pyproject.toml  ruff.toml
.desloppify/: config.json  query.json
.github/workflows/: checks-reusable.yml  checks.yml  release.yml
build_hooks/: build_dbmate.py
db/: schema.sql
src/matey/: __init__.py  __main__.py  bqemu.py  cli.py  cli_render.py  config.py  contracts.py  db.py  db_urls.py  dbmate.py  domain.py  env.py  errors.py  lock.py  lockfile.py  parsing.py  paths.py  presenter.py  project.py  runtime.py  schema.py  scratch.py  sql.py  template.py  tx.py  zero.py
src/matey/_vendor/dbmate/linux-amd64/THIRD_PARTY_LICENSES/: go-licenses-check.txt  go-licenses-report.txt  go-licenses-save.txt
src/matey/app/: ci_engine.py  config_engine.py  context.py  db_engine.py  kernel.py  protocols.py  runtime.py  schema_engine.py  scope.py
src/matey/cli/: app.py  ci.py  commands.py  common.py  help.py  options.py  output.py  presenter.py  render.py  template.py
src/matey/cli/commands/: __init__.py  cd.py  ci.py  common.py  config.py  data.py  db.py  dbmate.py  init.py  lint.py  lock.py  schema.py  template.py
src/matey/cli/groups/: db.py  schema.py  template.py
src/matey/data/: __init__.py  apply.py  export.py  io.py  model.py  validate.py
src/matey/db/: __init__.py  runtime.py
src/matey/domain/: config.py  constants.py  dbmate_output.py  digest.py  engine.py  lockfile.py  migration.py  model.py  plan.py  result.py  sql.py  target.py
src/matey/drivers/: dbmate.py  scratch.py
src/matey/infra/: artifact_store.py  dbmate.py  engine_policy.py  env.py  fs.py  git.py  locking.py  proc.py  runtime_io.py  scratch.py  sql_pipeline.py
src/matey/infra/scratch/: __init__.py  bigquery.py  containerized.py  factory.py  sqlite.py
src/matey/lint/: __init__.py  model.py  semantic.py  sqlfluff.py
src/matey/lockfile/: __init__.py  model.py  parse.py  state.py  validate.py
src/matey/repo/: __init__.py  git.py  snapshot.py
src/matey/schema/: __init__.py  artifacts.py  codegen.py  codegen_probe.py  plan.py  replay.py
src/matey/settings/: config.py  resolve.py
src/matey/sql/: __init__.py  ast.py  lex.py  policy.py  program.py  source.py
src/matey/templates/: __init__.py  cd.py  ci.py  config.py
src/matey/tx/: __init__.py  journal.py  locking.py  store.py
src/matey/workflows/: db_live.py  lockfile.py  schema.py  schema_diff.py  schema_exec.py  schema_git.py  schema_lock.py
src/matey_legacy/: __main__.py
src/matey_legacy/_vendor/dbmate/: README.md
src/matey_legacy/adapters/: dbmate.py  fs.py  git.py  scratch.py
src/matey_legacy/cli/: __init__.py  app.py  common.py  db.py  help.py  lock.py  options.py  output.py  schema.py  template.py
src/matey_legacy/core/: __init__.py  diff.py  down.py  errors.py  lock.py  replay.py  scratch.py  types.py
src/matey_legacy/services/: db.py  lock.py  schema.py  template.py
src/matey_legacy/settings/: config.py  env.py  resolve.py
src/matey_legacy/templates/: __init__.py  ci.py  targets.py  types.py
src/matey_legacy_next/: artifacts.py  cli.py  config.py  contracts.py  db.py  engine.py  lock.py  models.py  parsing.py  platform.py  schema.py  sql.py
src/matey_legacy_next/_vendor/dbmate/linux-amd64/THIRD_PARTY_LICENSES/: THIRD_PARTY_NOTICES.txt  go-licenses-check.txt  go-licenses-report.txt
tests/: test_config.py  test_dbmate.py  test_lockfile.py
tests/integration/: conftest.py  helpers_sql.py  test_data_matrix.py  test_db_matrix.py  test_dbmate_passthrough_live.py  test_lint.py  test_schema_live.py  test_schema_matrix.py  test_schema_validate_bigquery_live.py  test_schema_validate_live.py  test_schema_validate_upgrade_path_live.py
tests/integration/db/: test_db_live.py
tests/integration/schema/: test_schema_live.py
tests/unit/: test_bqemu.py  test_ci.py  test_cli.py  test_cli_cd.py  test_cli_ci.py  test_cli_config.py  test_cli_db_commands.py  test_cli_init.py  test_cli_output.py  test_cli_schema_regen_diff.py  test_cli_schema_validate.py  test_cli_template.py  test_codegen.py  test_config.py  test_data.py  test_db.py  test_db_live.py  test_db_urls.py  test_dbmate.py  test_env.py  test_git_repo.py  test_lint.py  test_lockfile.py  test_lockfile_workflows.py  test_paths.py  test_runner.py  test_schema.py  test_schema_read_only.py  test_schema_validate.py  test_scratch.py  test_snapshot.py  test_sql_corpus.py  test_sql_text.py  test_targets.py  test_template.py  test_tx.py  test_urls.py
tests/unit/app/: helpers.py  test_config_engine.py  test_db_engine.py  test_schema_engine.py  test_scope.py
tests/unit/cli/: test_cli_help.py  test_cli_wiring.py
tests/unit/domain/: test_dbmate_output.py  test_lockfile.py  test_migration.py  test_target.py
tests/unit/infra/: test_artifact_store.py  test_artifact_store_recovery.py  test_dbmate_gateway.py  test_engine_policy.py  test_sql_pipeline.py
